# polaris-core

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  CMakeLists.txt  LICENSE  README-DEPLOY.md  README.md  build-polaris-core.sh  copy-to-project.sh  example_usage.py  polaris_bind.cpp  pyproject.toml
.github/workflows/: ci.yml
legacy/: README-LEGACY.md  arg_compat.h  polaris_gen.cpp
scripts/: deploy.sh  tail-chat.sh
tests/: test_import.py  test_json_complete.py
xct-server/: CMakeLists.txt  build-xct-server.sh
